# CSE276B-FinalProject

./: .gitignore
camera_basics/: package.xml  setup.cfg  setup.py
camera_basics/camera_basics/: echo_camera.py
camera_configs/: camera_simple.yaml
display_manager/: LICENSE  package.xml  setup.cfg  setup.py
display_manager/display_manager/: __init__.py  display_manager.py
display_manager/test/: test_copyright.py  test_flake8.py  test_pep257.py
go_pupper_srv/: package.xml  setup.cfg  setup.py
go_pupper_srv/go_pupper_srv/: client_go_pupper.py  sample_controller.py
go_pupper_srv/go_pupper_srv/install/: local_setup.sh  setup.sh
input_detection/: package.xml  setup.cfg  setup.py
input_detection/input_detection/: client_camera.py  client_go_pupper.py  client_touch.py  service_camera.py  service_go_pupper.py  service_touch.py
lab2task4/: package.xml  setup.cfg  setup.py
lab2task4/lab2task4/: client_go_pupper.py  service_go_pupper.py
lab2task5/: package.xml  setup.py
main_manager/: package.xml  setup.cfg  setup.py
main_manager/main_manager/: main_manager.py  mock_manager.py  session_tracker.py  state_manager.py
position_manager/: package.xml  setup.cfg  setup.py
position_manager/position_manager/: .ser.swp  client_position.py  detect_position.py  movement_manager.py  service_position.py
pupper_behaviors/: package.xml  setup.cfg  setup.py
pupper_behaviors/pupper_behaviors/: __init__.py  behaviors.py
pupper_behaviors/test/: test_behaviors.py
pupper_interfaces/: CMakeLists.txt
pupper_interfaces/install/: local_setup.sh  setup.sh
pupper_interfaces/install/pupper_interfaces/share/pupper_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
pupper_interfaces/msg/: DistractionEvent.msg
pupper_interfaces/srv/: CameraPupper.srv  GoPupper.srv  StateManagerCommand.srv  TouchPupper.srv
py_srvcli/: package.xml  setup.py
speaker_manager/: README.md  client_speaker.py  package.xml  setup.cfg  setup.py
speaker_manager/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
speaker_manager/install/speaker_manager/lib/speaker_manager/: client  music_server  service
speaker_manager/install/speaker_manager/share/speaker_manager/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
speaker_manager/launch/: music.launch.py
speaker_manager/speaker_manager/: client_speaker.py  mock_speaker_publisher.py  music_player.py  music_server.py
speaker_manager/speaker_manager/install/: local_setup.sh  setup.sh  setup.zsh
(+105 files in other folders)
