<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go_pupper_srv</name>
  <version>0.0.0</version>
  <description>Go Pupper Service: Robot commands as a service</description>
  <maintainer email="lriek@ucsd.edu">lriek</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>pupper_interfaces</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
